Sun Jul  7 22:03:41 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/Makefile:
	* tao/Makefile.bor: Added the new files to the Makefiles. 

Sun Jul 07 21:56:23 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/Transport.h:
	* tao/Transport.cpp:
	* tao/Transport.inl: Did a few cosmetic changes. 

	  - Removed the TAO_Synch_Refcountable class and moved that to a
	    new file. 
	
	  - Rearranged the methods in cpp and inl files, so that the
	    methods specific for the input path and output path are
	    grouped together. Just did this to improve readability. 
	
	  - Added a new method by name transport_cache_manager () which
	    returns the reference to transport cache manager from the ORB.  

	* tao/Synch_Refcountable.{h,cpp,inl}: Added this new file which
	  contains the class TAO_Synch_Refcountable.
	
	* tao/TAO.dsp:
	* tao/TAO_Static.dsp: Added the new files to the project
	  workspace. 

	* tao/Incoming_Mesage_Queue.h: Fixed an erroneous comment. 

Sun Jul  7 18:53:54 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * TAO_IDL/fe/fe_tmplinst.cpp:

          Added ACE_Unbounded_Queue<AST_Operation *> and related
          entries. Thanks again to Marvin Wolfthal <maw@weichi.com>
          for the bug report.

Sun Jul  7 12:45:39 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * orbsvcs/orbsvcs/Makefile.IFRService:
        * TAO_IDL/Makefile.BE:
        * TAO_IDL/Makefile.EXE:
        * TAO_IDL/Makefile.FE:

          Updated dependencies.

Fri Jul  5 08:12:30 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* orbsvcs/orbsvcs/CosEvent/CEC_Default_Factory.cpp (init): 
	  Added an "else" clause to handle the case where a user gives
 	  incorrect options.  Thanks to Bruce McIntosh
 	  <Bruce.McIntosh@Australia.Boeing.com> for reporting this.

Sun Jul  7 10:24:06 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* orbsvcs/tests/Miop/McastHello/Makefile: Updated dependencies. 
